--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -31,6 +32,8 @@
   },
   "devDependencies": {
     "react-redux": "^7.0.3",
+    "redux-saga": "^1.0.2",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   }
 }
